Commit Coder For Scanning Aria In android wear

--- a/Aria/wear/src/main/res/values/colors.xml
+++ b/Aria/wear/src/main/res/values/colors.xml
@@ -10,5 +10,6 @@
 
     <color name="bgOk">#abfcab</color>
     <color name="bgError">#ff9c9c</color>
+    <color name="grey">#706c6c</color>
 
 </resources>
