--- a/Aria/wear/src/main/res/layout/fragment_dashboard_round.xml
+++ b/Aria/wear/src/main/res/layout/fragment_dashboard_round.xml
@@ -1,18 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:orientation="vertical"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent">
-
-
-    <ListView
-        android:id="@+id/lv_dashboard_menu"
+<android.support.wearable.view.BoxInsetLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
+    <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:dividerHeight="0dp"
-        android:divider="@null"
-        android:layout_marginBottom="20dp"/>
+        android:layout_height="wrap_content"
+        app:layout_box="left|right">
+        <android.support.wearable.view.WearableListView
+            android:id="@+id/lv_dashboard_menu"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:dividerHeight="0dp"
+            android:divider="@null"
+            android:layout_marginBottom="20dp"/>
+
+    </FrameLayout>
 
 
-</LinearLayout>
+
+
+</android.support.wearable.view.BoxInsetLayout>
