--- a/Aria/wear/src/main/res/layout/fragment_intro_round.xml
+++ b/Aria/wear/src/main/res/layout/fragment_intro_round.xml
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
-    <TextView
+    <!--<TextView
         android:id="@+id/tv_intro_status"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -15,6 +17,53 @@
         android:gravity="center"
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:text="Aria not connected"
-        android:textColor="@color/text"/>
+        android:textColor="@color/text"/>-->
+    <android.support.wearable.view.CardFrame
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center">
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Connect"/>
 
-</RelativeLayout>
+        </LinearLayout>
+
+
+    </android.support.wearable.view.CardFrame>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_margin="10dp"
+        android:gravity="center"
+        android:orientation="vertical">
+        <android.support.wearable.view.CircledImageView
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            app:circle_color="@color/dark_blue"
+            app:circle_radius="20dp"
+            app:circle_radius_pressed="25dp"
+            android:id="@+id/connect"
+            android:src="@drawable/ic_bluetooth"/>
+        <com.deus_tech.aria.view.CircularProgressView
+            android:layout_width="15dp"
+            android:layout_height="15dp"
+            android:id="@+id/progressBar"
+            app:cpv_indeterminate="true"
+            app:cpv_thickness="1dp"
+            app:cpv_color="@color/dark_blue"/>
+        <TextView
+            android:layout_gravity="center"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/tv_intro_status"/>
+
+    </LinearLayout>
+
+
+
+
+</LinearLayout>
